objects/OpportunityStageAge__c.object
<CustomObject>
    <fields>
        <fullName>Days__c</fullName>
        <formula>IF ( ISBLANK ( EndTime__c) , ( ( NOW() - StartTime__c ) ) , ( EndTime__c - StartTime__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>IF ( ISBLANK ( EndTime__c) , ( ( NOW() - StartTime__c ) * 24 ) , ( EndTime__c - StartTime__c ) * 24 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <formula>IF ( ISBLANK ( EndTime__c) , ( ( NOW() - StartTime__c ) * 1440 ) , ( EndTime__c - StartTime__c ) * 1440 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Stage Ages</relationshipLabel>
        <relationshipName>OpportunityStageAges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Opportunity Stage Values. 
Make sure these Values match the Values in the Stage Field. This will allow you to use the Picklist correctly with Reporting. Strictly enforce values has been turned off in the situation that you forget to do this.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Id. Decision Makers</fullName>
                </value>
                <value>
                    <fullName>Perception Analysis</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Opportunity Stage Age</label>
    <nameField>
        <displayFormat>OSA {00000}</displayFormat>
        <label>Opportunity Stage Age Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stage Ages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>